# fangfs

./: .travis.yml  CMakeLists.txt  DESIGN  DESIGN.md  README  README.md
src/: Buffer.cpp  Buffer.h  BufferEncryption.cpp  BufferEncryption.h  error.h  exlockfile.c  exlockfile.h  fangfs.c  fangfs.cpp  fangfs.h  file.c  file.cpp  file.h  main.c  main.cpp  metafile.c  metafile.cpp  metafile.h  util.c  util.cpp  util.h
src/compat/: compat.h  fdopendir.cpp
tests/: base32.c  base32.cpp  endian.c  exlockfile.c  header_parse.c  metafile.c  metafile.cpp  path_join.c  path_join.cpp  paths.cpp  test.h
tools/: generate-clang-report.sh  generate-cppcheck-report.sh
